[package]
name = "mars"
version = "0.1.0"
authors = ["Ticki <Ticki@users.noreply.github.com>"]

[dependencies]
hyper = "0.8.0"
serde = "0.7.10"
serde_json = "0.7.1"
serde_macros = "0.7.10"

[dependencies.url]
git = "https://github.com/servo/rust-url"
features = ["query_encoding"]

[dependencies.extra]
git = "https://github.com/redox-os/libextra"
